changed methods to POST to add session storage

--- a/templates/start_survey.html
+++ b/templates/start_survey.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %} {% block content %}
 <h1>{{ survey.title }}</h1>
 <p>{{ survey.instructions }}</p>
-<form action="/questions/0">
+<form action="/start" , method="POST">
   <button>Start Survey</button>
 </form>
 {% endblock %}
